<resources>
    <string name="app_name">Notes App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="note_fragment_label">Notes App</string>
    <string name="add_fragment_label">Add Note</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_fragment_label">Edit Note</string>
    <string name="search">Search</string>
    <string name="delete_all">Delete all</string>
</resources>